# KingJamesPureBibleSearch

programs/: CMakeLists.txt
programs/CrossRefParse/: CMakeLists.txt  main.cpp
programs/ELSSearch/: CMakeLists.txt  ELSResult.cpp  ELSResult.h  ELSSearchMainWindow.cpp  ELSSearchMainWindow.h  ELSSearchMainWindow.ui  LetterMatrix.cpp  LetterMatrixTableModel.cpp  LetterMatrixTableModel.h  main.cpp
programs/KJVCanOpener/: AboutDlg.cpp  BibleLayout.h  CMakeLists.txt  KJVCanOpener.cpp  PhraseParser.cpp  PhraseParser.h  SearchCriteria.cpp  SearchCriteria.h  SearchPhraseEdit.cpp  SearchPhraseEdit.h  SearchPhraseEdit.ui  SearchResults.cpp  SearchSpecWidget.cpp  SearchSpecWidget.h  dbstruct.cpp  dbstruct.h  main.cpp  myApplication.cpp
programs/KJVCanOpener/qwebchannel/html/: index.html
programs/KJVDataDump/: CMakeLists.txt  main.cpp
programs/KJVDataParse/: CMakeLists.txt  main.cpp
programs/KJVDictWord/: CMakeLists.txt  main.cpp
programs/KJVDiff/: CMakeLists.txt  main.cpp
programs/KJVLookup/: CMakeLists.txt  main.cpp
programs/KJVPhraseDump/: CMakeLists.txt  main.cpp
programs/KJVPhraseSearch/: CMakeLists.txt  main.cpp
programs/KJVSearch/: CMakeLists.txt  main.cpp
programs/KJVSumThing/: CMakeLists.txt  main.cpp
programs/MyBibleParse/: CMakeLists.txt  main.cpp
programs/eSwordDecrypt2/: CMakeLists.txt  eSwordDecrypt.cpp
programs/eSwordParse/: CMakeLists.txt  main.cpp
